CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

23 April 2007
+ Added logIfError function to Error class

19 April 2007
+ Added a function to Core to return the full package version.

17 April 2007
+ RFE 1639645 - added setRequired function to Form
+ Core - isPosted can now return the number of repeats

16 April 2007
+ Cookie - changed default time to 0 instead of null
+ Editor - moved FORCE_EDITOR variable to config.php. Changed define
           to a defined check with a default of false.
+ Setup - Added FORCE_EDITOR setting

13 April 2007
+ Added utf8_encode to all conversions to try and prevent foreign
  character corruption (Thanks Mabhobs)

12 April 2007
+ Convert Blog, Web Pages - Added parseInput to try and fix foreign
  characters
+ Made default template directory local.
+ Updated setup's config template with new local cache define.


11 April 2007
+ Removed Item include from Init.php, now up to module.
+ Added ENCODE_PARSED_TEXT define to text_settings.php
+ Added ability to prohibit encoding of text during parsing.

6 April 2007
+ Removed imageselect function from Form. Not used.
+ Removed translate functions throughout core.

5 April 2007
+ Added German translation files.
+ Further updates to Language.txt documentation
+ Small change in Init to ensure core's default status.

4 April 2007
+ Database - Fixed bug with addTable / changed all booleans to lower
             case
+ Module - Changed isInstalled slightly. If on initialization, there
           is a "not installed" error, we can assume the module is not
           installed and return false. Otherwise, we check in the
           normal way.
+ Init - Using new language translation method recommended by Ortwin
         Pinke

Documentation - updated Language.txt to reflect changes made in Init.php


3 April 2007
+ Bug #1690757 - Form.php : Added space to radio button to help with formatting